add code folder

--- a/_data/previous_offering.yml
+++ b/_data/previous_offering.yml
@@ -2,7 +2,7 @@ offerings:
   - title: Tutorial slides
     # url: https://previous_course_website.url/
   
-  - title: Prevalence estimation Jupyter notebook template
+  - title: Tutorial Jupyter notebooks
     # url: https://previous_course_website.url/
 
   - title: Arxiv preprint (forthcoming)
