--- a/_data/course_material.yml
+++ b/_data/course_material.yml
@@ -5,10 +5,10 @@ materials:
   - title: Tutorial Jupyter notebooks
     url: https://github.com/avalanchesiqi/prevalence-estimation-tutorial/tree/master/code
 
-  - title: Tutorial spreadsheet 1 (copy your own version)
+  - title: Spreadsheet 1 (make your own copy)
     url: https://docs.google.com/spreadsheets/d/10oEQR-_6px9sRF3cRiIPChiBcrWPVPy12TN7oHCA4qU/edit?usp=sharing
 
-  - title: Tutorial spreadsheet 2 (a shared doc between participants)
+  - title: Spreadsheet 2 (a shared document between participants)
     url: https://docs.google.com/spreadsheets/d/1LGc-JNuJ00l2B00-CQWGatNROsQ-v0KBUZxCWXfkkIc/edit?usp=sharing
 
   - title: Arxiv preprint (forthcoming)
