update web style

--- a/_data/course_materials.yml
+++ b/_data/course_materials.yml
@@ -1,5 +1,5 @@
 materials:
-  - title: Tutorial slides (available after the tutorial)
+  - title: Tutorial slides
     # url: https://previous_course_website.url/
   
   - title: Tutorial Jupyter notebooks
