--- a/_data/instructors.yml
+++ b/_data/instructors.yml
@@ -4,4 +4,4 @@ instructors:
     webpage: https://avalanchesiqi.github.io
   - name: Paul Resnick
     profile_pic: /_images/pp/presnick.png
-    webpage: http://presnick.people.si.umich.edu
+    webpage: https://www.si.umich.edu/people/paul-resnick
